[tool.poetry]
name = "tg-scheduled-pfp"
version = "0.0.0"
description = ""
authors = ["BananaLoaf <bananaloaf@protonmail.com>"]
readme = "README.md"
packages = [{include = "tg_scheduled_pfp"}]

[tool.poetry.dependencies]
python = "^3.10"
telethon = "^1.36.0"
typer = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
tg-scheduled-pfp = 'tg_scheduled_pfp.__init__:main'